Fix text wrapping and revert initial sizing code which seems to work now.

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -31,4 +31,5 @@ div.status {
   height: 20px;
   background: #000000;
   color: #00aaff;
+  white-space: nowrap;
 }
